# PixWeave

./: .gitignore  README.md  product.json  pyproject.toml
config/: pixweave.ini
deploy/: pixweave-beta.service
docs/: beta-launch-readiness.md  campaign-rendering.md  local-beta-product.md  pixweave-self-serve-subscription-validation-v1.md  product-risk-control-review.md  product-shot-workflow.md  prompt-pack-expansion.md  unit-economics.md
pixweave/: __init__.py  backend.py  beta_product.py  cli.py  config.py
tests/: test_beta_product.py  test_controlled_beta_protocol.py  test_product_workflows.py  test_repository_boundary.py  test_task_136_beta_session_economics.py
