[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pixweave"
version = "0.1.0"
description = "Controlled AI image generation and editing workflows"
requires-python = ">=3.11"

[project.scripts]
pixweave = "pixweave.cli:main"

[tool.setuptools.packages.find]
include = ["pixweave*"]
